fix line overlap bug

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ ul{
 #page2-text{
     position: absolute;
     width: 65vw;
-    left:39vw;
+    left:42vw;
     top: 9vw;
     text-align: left;
 }
